Poprawki wyrównania tekstu do lewej w komponentach About i Contact

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" />
+
     
     <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow" />
@@ -50,7 +49,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" role="application" aria-label="Meister Umzüge 24 - Aplikacja do przeprowadzek"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
