Dodano lazy loading i optymalizacje wydajności dla map i obrazów

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     <!-- Preconnect to critical origins -->
     <link rel="preconnect" href="https://api.mapbox.com">
     <link rel="preconnect" href="https://events.mapbox.com">
+    
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/optimized/hero-image-1.webp" as="image" type="image/webp">
+    <link rel="preload" href="/optimized/meister-umzunge-logo.webp" as="image" type="image/webp">
   </head>
 
   <body>
