Fix mobile menu and hero layout improvements

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="preconnect" href="https://events.mapbox.com">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/optimized/meister-umzunge-logo.webp" as="image" type="image/webp">
+    <link rel="preload" href="/meister-umzunge-logo.svg" as="image" type="image/svg+xml">
   </head>
 
   <body>
