--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="preconnect" href="https://events.mapbox.com">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/meister-umzunge-logo.svg" as="image" type="image/svg+xml">
+    <link rel="preload" href="/logo.svg" as="image" type="image/svg+xml" fetchpriority="high">
   </head>
 
   <body>
