--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" href="/optimized/hero-image-1.webp" as="image" type="image/webp" />
-    <link rel="preload" href="/logo.svg" as="image" type="image/svg+xml" />
+    <link rel="preload" href="/logo.svg" as="image" type="image/svg+xml" crossorigin />
     
     <!-- DNS prefetch for external domains -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
