Add Google Ads tracking tag (AW-17470976934)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17470976934">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17470976934');
+    </script>
+    
     <title>Meister Umzüge 24 - Profesjonalne Przeprowadzki w Niemczech</title>
   </head>
   <body>
