Set German as default language and update meta tags to German

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Meister Umzüge 24 - Profesjonalne usługi przeprowadzkowe w Niemczech. Szybko, bezpiecznie i niezawodnie." />
-    <meta name="keywords" content="przeprowadzki, umzug, meister umzüge, niemcy, przeprowadzki berlin" />
+    <meta name="description" content="Meister Umzüge 24 - Professionelle Umzugsdienste in Deutschland. Schnell, sicher und zuverlässig." />
+    <meta name="keywords" content="umzug, umzüge, meister umzüge, deutschland, umzug berlin" />
     <meta name="author" content="Meister Umzüge 24" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#3b82f6" />
@@ -37,7 +37,7 @@
       gtag('config', 'AW-17470976934');
     </script>
     
-    <title>Meister Umzüge 24 - Profesjonalne Przeprowadzki w Niemczech</title>
+    <title>Meister Umzüge 24 - Professionelle Umzugsdienste in Deutschland</title>
   </head>
   <body>
     <div id="root"></div>
